Adding original examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
 *.class
 *.log
+.java-version
+
+autoSetup.sh
+seedSetup.sh
+machine0Setup.sh
+machine1Setup.sh
+.DS_Store
+.end 
+.env
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/project
+project/target
+logs
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
+
+#raphtory env
+mainproject/.env
+*.class
+*.log
